Tied Coyote Frames mechanic to config and added it to launcher

--- a/launcher/presets/Recommended.ini
+++ b/launcher/presets/Recommended.ini
@@ -43,6 +43,7 @@ disable_fall_damage = "false"
 allow_leaving_the_course_at_any_time = "false"
 make_secrets_visible = "false"
 fix_exploits = "false"
+coyote_frames = "5"
 [PROGRESSION]
 tie_bowsers_sub_to_missions = "true"
 always_stay_in_course = "0"
